--- a/gestion_construccion.web/Views/Shared/_Layout.cshtml
+++ b/gestion_construccion.web/Views/Shared/_Layout.cshtml
@@ -51,8 +51,10 @@
     </main>
   </div>
 
-  <footer style="color:var(--color-text-secondary); text-align:center; padding:20px; margin-top:40px; border-top:1px solid var(--color-border);">
-    &copy; @DateTime.Now.Year - Firmaza Admin
+  <footer class="footer-admin">
+    <div class="row">
+        &copy; @DateTime.Now.Year - Firmaza Admin
+    </div>
   </footer>
 
   <script src="~/lib/jquery/dist/jquery.min.js"></script>
