--- a/gestion_construccion.web/Views/Ventas/Receipt.cshtml
+++ b/gestion_construccion.web/Views/Ventas/Receipt.cshtml
@@ -76,6 +76,14 @@
     </div>
 
     <div class="form-actions">
+        <a asp-action="DownloadReceipt" asp-route-id="@Model.Id" class="btn-admin-primary" target="_blank" style="margin-right: 10px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                <polyline points="7 10 12 15 17 10"></polyline>
+                <line x1="12" y1="15" x2="12" y2="3"></line>
+            </svg>
+            Descargar PDF
+        </a>
         <a asp-action="Index" class="btn-admin-secondary btn-cancel">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M19 12H5"></path>
